added support functionality

--- a/src/AddImage/index.html
+++ b/src/AddImage/index.html
@@ -28,7 +28,7 @@
                 <div
                 class="col-md-12" style="margin-left:136px;">
                     <button id="fillProfileBtn" class="btn btn-default" type="button" data-bs-hover-animate="pulse" style="margin-right:5px;padding-right:0px;width:155px;background-color:rgb(255,127,138);background-image:url(&quot;#FF7F8A&quot;);color:white;height:44px;border:none;font-family:'Roboto Condensed', sans-serif;padding-top:0px;padding-bottom:0px;padding-left:0px;">FILL OUT PROFILE</button>
-                    <button class="btn btn-default" id="memberBtn" type="button"data-bs-hover-animate="pulse" onClick="document.location.href='../../../homepage/search.php'" style="margin-right:5px;width:155px;height:44px;padding-right:0px;padding-left:0px;border:solid;border-width:1px;background-image:none;background-color:transparent;border-color:white;color:white;padding-top:0px;font-family:'Roboto Condensed', sans-serif;padding-bottom:0px;">GO TO MEMBERS</button>
+                    <button class="btn btn-default" id="memberBtn" type="button"data-bs-hover-animate="pulse" onClick="document.location.href='../homepage/search.html'" style="margin-right:5px;width:155px;height:44px;padding-right:0px;padding-left:0px;border:solid;border-width:1px;background-image:none;background-color:transparent;border-color:white;color:white;padding-top:0px;font-family:'Roboto Condensed', sans-serif;padding-bottom:0px;">GO TO MEMBERS</button>
             </div>
         </div>
     </div>
