--- a/src/member/member.html
+++ b/src/member/member.html
@@ -62,7 +62,7 @@
                         <div class="col-md-12" style="background-color:white;margin-bottom:16px;margin-top:10px;"><i class="fa fa-user" style="color:#169eeb;margin-left:-12px;"></i><span style="margin-left:5px;font-size:16px;">Overview </span></div>
                         <div class="col-md-12" style="width:auto;padding-right:0px;padding-left:0px;">
                             <ul class="list-group" style="width:183px;border:none;">
-                                <li class="list-group-item" style="margin-bottom:0px;padding-right:5px;padding-left:0px;"><i class="fa fa-graduation-cap" style="color:#FB5275;"></i><span style="margin-left:5px;">Education </span>
+                                <li class="list-group-item" style="margin-bottom:0px;padding-right:5px;padding-left:0px;"><i class="fa fa-graduation-cap" style="color:#FB5275;"></i><span style="margin-left:0px;">Education </span>
                                     <p id="school" style="margin-left:23px;"></p>
                                 </li>
                                 <li class="list-group-item" style="padding-right:0px;padding-left:0px;"><i class="fa fa-globe" style="color:rgb(237,201,17);"></i><span style="margin-left:5px;">Ethnicity </span>
@@ -81,16 +81,20 @@
                                 <li class="list-group-item" style="padding-right:0px;padding-left:0px;color:purple;"><i class="fa fa-beer"></i><span style="margin-left:5px;">Drinker </span>
                                     <p id="drinker" style="margin-left:18px;"></p>
                                 </li>
+                                 <li class="list-group-item" style="padding-right:0px;padding-left:0px;"><i class="fa fa-user"></i><span style="margin-left:5px;">Smoker </span>
+                                    <p id="smoker" style="margin-left:16px;"></p>
+                                </li>
                             </ul>
                         </div>
                         <div class="col-md-12" style="width:auto;padding-right:0px;padding-left:0px;">
                             <ul class="list-group" style="width:183px;border:none;">
                                 <li class="list-group-item" style="margin-bottom:0px;padding-right:5px;padding-left:0px;border:none;"><i class="fa fa-home" style="color:#FB5275;"></i><span style="margin-left:5px;">Hometown </span>
-                                    <p id="homeTown" style="margin-left:19px;"></p>
+                                    <p id="homeTown" style="margin-left:19px;">Test, Test</p>
                                 </li>
-                                <li class="list-group-item" style="padding-right:0px;padding-left:0px;"><i class="fa fa-user"></i><span style="margin-left:5px;">Smoker </span>
-                                    <p id="smoker" style="margin-left:16px;"></p>
+                                <li id="disabilityItem" hidden class="list-group-item"  style="margin-bottom:0px;padding-right:5px;padding-left:0px;border:none;"><i class="fa fa-user" style="color:blue;"></i><span style="margin-left:0px;">Disability </span>
+                                    <p id="disability" style="margin-left:10px;"></p>
                                 </li>
+                               
                             </ul>
                         </div>
                     </div>
@@ -130,15 +134,16 @@
                     <ul class="list-group">
                         <li class="list-group-item" style="padding-left:0px;padding-right:0px;padding-top:21px;background-color:#3C3C3C;height:69px;"><i class="icon ion-ios-arrow-back" style="font-size:15px;margin-right:10px;margin-left:83px;margin-top:5px;color:white;"></i><a href="../homepage/search.html" style="margin-top:0px;padding-top:0px;color:white;font-size:12px;">Back To Members</a></li>
                         <li
-                        class="list-group-item" style="padding-top:0px;padding-right:0px;padding-left:0px;padding-bottom:0px;"><img id="matchImage1" src="" style="width:100%;height:250px;"></li>
-                            <li class="list-group-item" style="padding-top:0px;padding-right:0px;padding-left:0px;padding-bottom:0px;">
-                                <img id="matchImage2" src="assets/img/person.png" style="width:100%;height:250px;"><a href="#"></a></li>
-                            <li class="list-group-item" style="padding-top:0px;padding-right:0px;padding-left:0px;padding-bottom:0px;">
-                                <img id="matchImage3" src="assets/img/person.png" style="width:100%;height:250px;"></li>
-                            <li class="list-group-item" style="padding-top:0px;padding-right:0px;padding-left:0px;padding-bottom:0px;">
-                                <img id="matchImage4" src="assets/img/person.png" style="width:100%;height:250px;"></li>
-                            <li class="list-group-item" style="padding-top:0px;padding-right:0px;padding-left:0px;padding-bottom:0px;">
-                                <img id="matchImage5" src="assets/img/person.png" style="width:100%;height:250px;"></li>
+                        class="list-group-item" style="padding-top:0px;padding-right:0px;padding-left:0px;padding-bottom:0px;">
+                        <img id="matchImage1" src="" style="width:100%;height:250px;"></li>
+                            <li class="list-group-item" style="border:dashed;border-color:black;padding:25px;">
+                                <img id="matchImage2" src="assets/img/person.png" style="width:100%;height:230px;"><a href="#"></a></li>
+                            <li class="list-group-item" style="border:dashed;border-color:black;padding:25px;">
+                                <img id="matchImage3" src="assets/img/person.png" style="width:100%;height:230px;"></li>
+                            <li class="list-group-item" style="border:dashed;border-color:black;padding:25px;">
+                                <img id="matchImage4" src="assets/img/person.png" style="width:100%;height:230px;"></li>
+                            <li class="list-group-item" style="border:dashed;border-color:black;padding:25px;">
+                                <img id="matchImage5" src="assets/img/person.png" style="width:100%;height:230px;"></li>
                     </ul>
                 </div>
             </div>
