--- a/src/signin/index.html
+++ b/src/signin/index.html
@@ -56,7 +56,7 @@
 							</div>
 							
 							<div class="footer text-center">
-								<button id="registerBtn" type="button" style="color:#EE4C5D;" class="btn btn-primary btn-simple btn-wd btn-lg">Sign In</button>
+								<button id="registerBtn" type="button" style="color:white;" class="btn btn-primary btn-simple btn-wd btn-lg">Sign In</button>
 							</div>
 							<div style="background-image: linear-gradient(60deg, rgb(238, 76, 93), rgb(244, 133, 116));" class="footer footer-primary text-center">
 								<div class="social-line">
