--- a/src/homepage/search.html
+++ b/src/homepage/search.html
@@ -41,7 +41,7 @@
         <ul class="left hide-on-med-and-down" style="margin-left:20%;">
           <li  class="active"><a style="color:black;font-size:14px;" href="../homepage/search.html">Members</a></li>
           <li><a style="color:black;font-size:14px;" href="../messages">Messages</a></li>
-          <li><a style="color:black;font-size:14px;" href=#join>Support</a></li>
+          <li><a style="color:black;font-size:14px;" href="../support">Support</a></li>
         </ul>
       </div>
     </nav>
