--- a/src/support/index.html
+++ b/src/support/index.html
@@ -11,7 +11,7 @@
     <meta name="msapplication-TileColor" content="#00bcd4">
     <link href="../homepage/materialize/css/materialize.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="../util/css/loader.css">
 
   </head>
@@ -53,19 +53,19 @@
       <div class="wrapper">
         <section id="content">
           <!--start container-->
-          <div class="container" style="margin-top:10px;">
+          <div class="container" style="margin-top:10px;width:95%;">
             <div id="profile-page" class="section">
               <!-- profile-page-header -->
             
               <!--/ profile-page-header -->
               <!-- profile-page-content -->
-              <div id="profile-page-content" class="row" style="height:550px;overflow-y:hidden;">
+              <div id="profile-page-content" class="row" style="">
                 <!-- profile-page-sidebar-->
-                <div id="profile-page-sidebar" class="col s12 m8" style="overflow-y:hidden;">
+                <div id="profile-page-sidebar" class="col s12 m7" style="overflow-y:hidden;">
                   <!-- Profile About  -->
                   <div id="profile-page-wall-share" class="row">
-                    <div class="col s12" style="">
-                      <div class="card">
+                    <div class="col s12 m7" style="width:100%;">
+                      <div class="card" style="width:100%;">
                         <div class="card-content black-text" style="padding-top:10px;">
                         <span class="card-title" style="font-size:20px;font-weight:200px;margin-bottom:50px;">Submit A Ticket</span>
                         <div class="row">
@@ -105,40 +105,43 @@
                 </div>
                 <!-- profile-page-sidebar-->
                 <!-- profile-page-wall -->
-                <div id="profile-page-sidebar" class="col s12 m4" style="overflow-y:hidden;">
-                  <!-- Profile About  -->
-                  <div id="profile-page-wall-share" class="row">
-                    <div class="col s12" style="">
-                      <div class="card">
-                        <div class="card-content black-text" style="padding-top:10px;">
-                          <span class="card-title" style="font-size:20px;font-weight:200px;margin-bottom:10px;">Open Tickets</span>
-                          <div class="row" id="openTickets">
-                             <div class="left-align col s6">Ticket ID</div>
-                             <div class="right-align col s6">Created At</div>
-                             <hr>
-                          </div>
-                      </div>
-                    </div><!--/profile-page-content-->
-                  </div>
-                </div><!--/profile-page-->
-              </div><!--container-->
-              <div id="profile-page-sidebar" class="col s12 m4" style="overflow-y:hidden;">
-                  <!-- Profile About  -->
-                  <div id="profile-page-wall-share" class="row">
-                    <div class="col s12" style="">
-                      <div class="card">
-                        <div class="card-content black-text" style="padding-top:10px;">
-                          <span class="card-title" style="font-size:20px;font-weight:200px;margin-bottom:10px;">Resolved Tickets</span>
-                          <div class="row" id="closedTickets">
-                             <div class="left-align col s6">Ticket ID</div>
-                             <div class="right-align col s6">Created At</div>
-                             <hr>
-                          </div>
-                      </div>
-                    </div><!--/profile-page-content-->
-                  </div>
-                </div><!--/profile-page-->
-              </div><!--container-->
+                <div class="col s12 m5">
+                  <div id="profile-page-sidebar" class="col s12 m4" style="width:100%;">
+                    <!-- Profile About  -->
+                    <div id="profile-page-wall-share" class="row">
+                      <div class="col s12" style="">
+                        <div class="card">
+                          <div class="card-content black-text" style="padding-top:10px;">
+                            <span class="card-title" style="font-size:20px;font-weight:200px;margin-bottom:10px;">Open Tickets</span>
+                            <div class="row" id="openTickets">
+                               <div class="left-align col s3">ID</div>
+                                <div class="center-align col s4">Subject</div>
+                               <div class="right-align col s5">Opened On</div>
+                               <hr>
+                            </div>
+                        </div>
+                      </div><!--/profile-page-content-->
+                    </div>
+                  </div><!--/profile-page-->
+                </div><!--container-->
+                <div id="profile-page-sidebar" class="col s12 m4" style="width:100%;">
+                    <!-- Profile About  -->
+                    <div id="profile-page-wall-share" class="row">
+                      <div class="col s12" style="">
+                        <div class="card">
+                          <div class="card-content black-text" style="padding-top:10px;">
+                            <span class="card-title" style="font-size:20px;font-weight:200px;margin-bottom:10px;">Resolved Tickets</span>
+                            <div class="row" id="closedTickets">
+                               <div class="left-align col s4">Ticket ID</div>
+                               <div class="right-align col s8">Created At</div>
+                               <hr>
+                            </div>
+                        </div>
+                      </div><!--/profile-page-content-->
+                    </div>
+                  </div><!--/profile-page-->
+                </div><!--container-->
+              </div>
             </section><!--section-->
           </div><!--wrapper-->
     </div><!--main-->
